<resources>
    <string name="app_name">Talent_bank</string>
    <string name="signup">登录</string>
    <string name="account">账号（手机号）</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="img_profile">img_profile</string>
    <string name="guide_btntxt">立即体验</string>
    <string name="img_guide1">img_guide1</string>
    <string name="img_guide2">img_guide2</string>
    <string name="signupback">signupback</string>
    <string name="reg_name">昵称</string>
    <string name="reg_number">手机号</string>
    <string name="reg_password">设置密码</string>
    <string name="reg_password_mark">密码由八个以上十六个以下数字或字母组成</string>
    <string name="reg_code">验证码</string>
    <string name="reg_getcode">获取</string>
    <string name="next">下一步</string>
    <string name="secretmessage">隐私信息</string>
    <string name="QQ">年级与专业</string>
    <string name="Wechart">联系方式（请备注QQ/Wechart）</string>
    <string name="Email">您的邮箱</string>
    <string name="adress">您的联系地址</string>
    <string name="comple">完成</string>
    <string name="Rempassword">记住密码</string>
    <string name="error_invalid_password">密码错误</string>
    <string name="error_invalid_number">账号错误</string>
    <string name="error_haveexit_number">手机号已注册</string>
    <string name="error_empty">请正确输入</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
