<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".register.RegisterBasedActivity">

    <LinearLayout
        android:id="@+id/RBhead"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:paddingTop="10dp"
        android:paddingStart="30dp"
        android:gravity="bottom"
        tools:ignore="RtlSymmetry,UseCompoundDrawables">
        <ImageView
            android:id="@+id/RBimg_back"
            android:layout_width="18dp"
            android:layout_height="22dp"
            android:contentDescription="@string/signupback"
            android:background="@drawable/back"/>
        <TextView
            android:gravity="center"
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="58dp"
            android:textColor="@color/titlecolor"
            android:text="@string/register"
            android:paddingStart="10dp"
            android:textSize="20sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.73">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        android:padding="30dp">
        <TextView
            android:id="@+id/RBtextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:text="@string/reg_name"
            android:textColor="#000"
            android:textSize="17sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/RBeditName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLength="8"
            android:inputType="textPersonName"
            android:textSize="17sp"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/RBtextNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_number"
            android:textColor="#000"
            android:paddingTop="38dp"
            android:textSize="17sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/RBeditNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLength="11"
            android:inputType="phone"
            android:textSize="17sp"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/RBtextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_password"
            android:paddingTop="38dp"
            android:textColor="#000"
            android:textSize="17sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/RBeditPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:maxLength="16"
            android:textSize="17sp"
            android:importantForAutofill="no"
            tools:ignore="LabelFor,TextFields" />

        <TextView
            android:id="@+id/RBtextPasswordmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#CDCDCD"
            android:text="@string/reg_password_mark"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/RBtextCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="38dp"
            android:text="@string/reg_code"
            android:textSize="17sp"
            android:textColor="#000"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
            <EditText
                android:maxLength="6"
                android:id="@+id/RBeditCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:textSize="17sp"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
            <Button
                android:id="@+id/RBbtn_code"
                android:layout_width="68dp"
                android:layout_height="35dp"
                android:textSize="13sp"
                android:background="@drawable/getcode_btnshape"
                android:textColor="#fff"
                android:text="@string/reg_getcode"/>
        </LinearLayout>

    </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.17"
        android:gravity="center_vertical">
        <Button
            android:id="@+id/RBbtn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="53dp"
            android:background="@drawable/signup_btnshape"
            android:bufferType="normal"
            android:paddingVertical="15dp"
            android:stateListAnimator="@null"
            android:text="@string/next"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>