<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.RegisterLastActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/RLhead"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:paddingTop="10dp"
        android:paddingStart="30dp"
        android:gravity="bottom"
        tools:ignore="RtlSymmetry,UseCompoundDrawables">
        <ImageView
            android:id="@+id/RLimg_back"
            android:layout_width="18dp"
            android:layout_height="22dp"
            android:contentDescription="@string/signupback"
            android:background="@drawable/back"/>
        <TextView
            android:gravity="center"
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="58dp"
            android:text="@string/secretmessage"
            android:textColor="@color/titlecolor"
            android:paddingStart="10dp"
            android:textSize="20sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.73">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        android:padding="30dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/RLtextGrade"
                android:paddingTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/QQ"
                android:textSize="16sp"
                android:textColor="#000"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*"
                android:textSize="20sp"
                android:paddingTop="25dp"
                android:textColor="#FF0000"
                android:paddingLeft="8dp"
                android:layout_toEndOf="@+id/RLtextGrade"/>
        </RelativeLayout>
        <EditText
            android:id="@+id/RLeditGrade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="如：2018级/软件工程"
            android:maxLength="15"
            android:textSize="16sp"
            tools:ignore="LabelFor"
            tools:layout_editor_absoluteX="20dp" />

        <TextView
            android:id="@+id/RLtextWechart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Wechart"
            android:paddingTop="38dp"
            android:textSize="16sp"
            android:textColor="#000"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/RLeditWechat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="如：5201314(QQ)"
            android:inputType="text"
            android:maxLength="25"
            android:textSize="16sp"
            tools:ignore="LabelFor"
            tools:layout_editor_absoluteX="20dp" />

        <TextView
            android:id="@+id/RLtextEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Email"
            android:paddingTop="38dp"
            android:textSize="16sp"
            android:textColor="#000"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/RLeditEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="20"
            android:textSize="16sp"
            tools:ignore="LabelFor,TextFields"
            tools:layout_editor_absoluteX="20dp" />


        <TextView
            android:id="@+id/RLtextAdress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adress"
            android:textSize="16sp"
            android:textColor="#000"
            android:paddingTop="38dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/RLeditAdress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLength="50"
            android:inputType="text"
            android:textSize="16sp"
            android:hint="如：华南理工大学大学城校区"
            tools:ignore="LabelFor" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="广州番禺区大学城内"
            android:textSize="13sp"
            android:textColor="#CDCDCD"/>
    </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.17">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">
            <Button
                android:id="@+id/RLbtn_complet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="53dp"
                android:stateListAnimator="@null"
                android:background="@drawable/signup_btnshape"
                android:bufferType="normal"
                android:paddingVertical="14dp"
                android:text="@string/comple"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/RL_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/RLbtn_complet"
                android:layout_alignEnd="@+id/RLbtn_complet"
                android:layout_alignBottom="@+id/RLbtn_complet"
                android:src="@drawable/loading"
                android:visibility="gone" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>