<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF7F7"
    android:id="@+id/SignUP"
    android:focusableInTouchMode="true"
    tools:context=".LoginActivity">

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:background="@drawable/signup_btnshape"
        android:bufferType="normal"
        android:stateListAnimator="@null"
        android:text="@string/signup"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.56" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <EditText
        android:id="@+id/SPedt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPassword"
        android:labelFor="@id/SPedt_password"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/txt_edtpas" />

    <TextView
        android:id="@+id/txt_edtpas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="16sp"
        android:textColor="#686868"
        app:layout_constraintBottom_toTopOf="@+id/SPedt_password"
        app:layout_constraintStart_toStartOf="@+id/SPedt_number" />

    <EditText
        android:id="@+id/SPedt_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="phone"
        android:labelFor="@id/SPedt_number"
        app:layout_constraintBottom_toTopOf="@+id/txt_edtpas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_edtnum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:textSize="16sp"
        android:textColor="#686868"
        app:layout_constraintBottom_toTopOf="@+id/SPedt_number"
        app:layout_constraintStart_toStartOf="@+id/SPedt_number" />

    <ImageView
        android:id="@+id/SP_img_back"
        android:layout_width="19dp"
        android:layout_height="22dp"
        android:layout_marginStart="35dp"
        android:contentDescription="@string/signupback"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/back"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.11" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textColor="#686868"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="@+id/SP_img_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/SP_img_back" />

    <CheckBox
        android:id="@+id/checkBox_rempassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/Rempassword"
        android:layout_marginTop="10dp"
        android:textColor="#686868"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="@+id/SPedt_password"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <CheckBox
        android:id="@+id/SP_check_showpassword"
        android:layout_width="30dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:checked="true"
        android:background="@drawable/hidepassword_choose"
        android:button="@null"
        app:layout_constraintBottom_toBottomOf="@+id/SPedt_password"
        app:layout_constraintStart_toEndOf="@+id/SPedt_password"
        app:layout_constraintTop_toTopOf="@+id/SPedt_password"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>